--- a/css/typo.css
+++ b/css/typo.css
@@ -1,29 +1,31 @@
 @import url('https://fonts.googleapis.com/css?family=Amatic+SC|Caveat+Brush|Coming+Soon&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=Cutive+Mono&display=swap');
 body {
   font-family: helvetica;
 }
 
 header h1 {
-  font-family: 'Amatic SC';
-  font-size: 150px;
+  font-family: 'cutive Mono';
+  font-size: 60px;
 }
+
+
 h1 {
-  font-size: 5em;
+  font-size: 2em;
   margin-bottom: 1.25em;
-  font-family: 'Coming Soon';
+  font-family: 'cutive Mono';
 }
 
 h2 {
 font-size: 2em;
 margin-bottom: 1em;
-font-family: 'Coming Soon';
+font-family: 'cutive Mono';
 color: white;
 
 }
 h3 {
-  font-size: 1.5em;
-  font-family: 'Coming Soon';
+  font-size: 2em;
+  font-family: 'cutive Mono';
   color: #763516;
 
 }
@@ -35,7 +37,9 @@ p{
 
 }
 
-li {
-  font-family: 'Amatic SC';
-  font-size: 2em;
+li a {
+  font-family: 'cutive Mono';
+  font-size: 19pt;
+    color: #763516;
+    text-decoration: none;
 }
