--- a/css/master.css
+++ b/css/master.css
@@ -1,52 +1,77 @@
 body {
   background-color: #ffff;
 }
-section {
-  border-top: 2px solid #FFFBE8;
-  min-height: 80vh;
-}
+
 
 header {
 text-align: center;
 padding : 2em;
 color: #df8814;
 background-color: #FFFBE8;
+border-bottom-right-radius: 45px;
+border-bottom-left-radius: 45px;
+height: 300px
+
 }
+
+
+
 
 .portfolio {
   font-size: 40px;
-}
-
-
-
-#conteneur {
-display: flex;
-flex-direction: row;
-justify-content: center;
 
 }
 
-#conteneur a {
-  padding: 1.3em;
-  border-top: 1px dashed #df8814;
+
+nav a {
+  display: block;
+  padding: 0.5em;
+  text-decoration: none;
+  color : #7a4b0d;
 }
 
-li a:hover {
-  color: #F4972E;
+a:hover {
+  color: #e78e1a;
 }
 
-#projets a:hover{
-  color: #ffff;
-}
+
+@media (min-width : 700px) {
+  #main-menu {
+    position: relative;
+    left:auto;
+    top: auto;
+    width: 100%;
+  }
+
+
+  #main-menu ul {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: space-around;
+    padding: 3em;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    border-top: 2px solid #df8814;
+
+  }
+
+
+
 
 #projets h3 {
   margin: 1.5em;
   color: #763516;
+  text-align: center;
+
 }
 
 #photos h3 {
   margin: 1.5em;
   color: #763516;
+  text-align: center;
+
 }
 
 #àpropos h3 {
@@ -60,6 +85,8 @@ li a:hover {
   display: flex;
 justify-content: center;
 font-size: 30px;
+margin: 1em;
+
 }
 
 
@@ -67,6 +94,8 @@ font-size: 30px;
   display: flex;
 justify-content: center;
 font-size: 30px;
+margin: 1em;
+
 }
 
 
@@ -74,6 +103,7 @@ font-size: 30px;
   display: flex;
 justify-content: center;
 font-size: 30px;
+margin: 1em;
 }
 
 
@@ -81,6 +111,8 @@ font-size: 30px;
   display: flex;
 justify-content: center;
 font-size: 30px;
+margin: 1em;
+
 }
 
 
@@ -88,12 +120,16 @@ font-size: 30px;
   display: flex;
 justify-content: center;
 font-size: 30px;
+margin: 1em;
+
 }
 
 .rough-txt {
   display: flex;
 justify-content: center;
 font-size: 30px;
+margin: 1em;
+
 }
 
 
@@ -106,10 +142,17 @@ font-size: 30px;
 
 .project-feature img {
   max-width: 550px;
-  border-radius: 23px;
+  border-radius: 45px;
   display: flex;
+  transition: 0.3s ease all;
+
 }
 
+
+.project-feature img:hover{
+  opacity: 0.4;
+
+}
 
 .project-box-container {
   display: flex;
@@ -121,34 +164,61 @@ font-size: 30px;
 }
 
 
-.photos-feature {
-  padding: 1em;
-  margin-bottom: 1em;
-  flex-grow: 0;
-  flex-basis: 300px;
 
-}
-
-.photos-box-container {
+.photos-container {
+  max-width: 1000px;
+  margin: auto;
+  padding : 1em;
   display: flex;
-  padding: 1em;
   flex-wrap: wrap;
   justify-content: space-around;
-  max-width: 600px;
-  margin: auto;
+}
+
+.photos {
+  padding: 1em;
+  margin-bottom: 3em;
+  flex-basis : 300px;
+}
+
+.photos img {
+  object-fit: cover;
+  height: 600px;
+  width: 300px;
+  transition: 0.3s ease all;
+}
+
+.photos img:hover {
+  opacity: 0.4;
+}
+
+.position-photos {
+  display: grid;
+  margin-top: 40px;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
+.position-photos img {
+  width :   900px;
+  height:   100%;
+  object-fit: cover;
 }
 
 
-
-#àpropos figure{
+#àpropos figure {
 display: flex;
 justify-content: center;
 align-items: center;
 }
 
+
 #àpropos p{
-  text-align: center;
-  padding: 2em;
+  text-align: justify;
+  padding: 3em;
+line-height: 21px;
+
 }
 
 footer {
