--- a/css/typo.css
+++ b/css/typo.css
@@ -28,34 +28,11 @@ li a {
 
 
 
-.lino-txt {
+.titre-projet {
   font-family: 'cutive mono';
   color: #E7710E;
 }
 
-.edition-txt {
-  font-family: 'cutive mono';
-  color: #E7710E;
-}
-.aqua-txt {
-  font-family: 'cutive mono';
-  color: #E7710E;
-}
-
-.layout-txt {
-  font-family: 'cutive mono';
-  color: #E7710E;
-}
-
-.identite-txt {
-  font-family: 'cutive mono';
-  color: #E7710E;
-}
-
-.rough-txt {
-  font-family: 'cutive mono';
-  color: #E7710E;
-}
 
 
 h2 {
