--- a/css/master.css
+++ b/css/master.css
@@ -15,8 +15,6 @@ height: 300px
 }
 
 
-
-
 .portfolio {
   font-size: 40px;
 
@@ -81,78 +79,47 @@ a:hover {
 }
 
 
-.lino-txt {
-  display: flex;
-justify-content: center;
-font-size: 30px;
-margin: 1em;
-
-}
 
 
-.edition-txt {
-  display: flex;
-justify-content: center;
-font-size: 30px;
-margin: 1em;
 
-}
-
-
-.aqua-txt {
-  display: flex;
-justify-content: center;
-font-size: 30px;
-margin: 1em;
-}
-
-
-.layout-txt {
-  display: flex;
-justify-content: center;
-font-size: 30px;
-margin: 1em;
-
-}
-
-
-.identite-txt {
-  display: flex;
-justify-content: center;
-font-size: 30px;
-margin: 1em;
-
-}
-
-.rough-txt {
-  display: flex;
-justify-content: center;
-font-size: 30px;
-margin: 1em;
-
-}
 
 
 .project-feature {
-  margin-bottom: 2em;
-  flex-grow: 0;
-  flex-basis: 300px;
+  position: relative;
+}
+
+.titre-projet {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  font-size: 2em;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+opacity: 0;
+background: white;
+transition: opacity 1s;
+}
+
+
+.titre-projet:hover {
+  color : #df8814;
+  opacity: 1;
+  transition: opacity .8s;
+
 
 }
 
 .project-feature img {
-  max-width: 550px;
+  max-width: 500px;
   border-radius: 45px;
-  display: flex;
-  transition: 0.3s ease all;
+  margin: 1.5em;
 
 }
 
-
-.project-feature img:hover{
-  opacity: 0.4;
-
-}
 
 .project-box-container {
   display: flex;
@@ -162,6 +129,10 @@ margin: 1em;
   max-width: 1600px;
   margin: auto;
 }
+
+
+
+
 
 
 
